ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: git.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-service
                port:
                  number: 3000
